5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4182/executions/1679_1100.log
== SUBMITION (2019-04-24 20:42:00) 
-- CODE:
c=int(input())

elif (c==2)
	print("Tartaruga")

elif (c==5)
	print("Garca")

elif (c==10)
	print("Arara")

elif (c==20)
	print("Mico-leao-dourado")

elif (c==50)
	print("Onca-pintada")

elif (c==100)
	print("Garoupa")
-- EXECUTION TIME:
0.185694
-- ERROR:
  File "/home/codebench/codes/1679/1100/main.py", line 3
    elif (c==2)
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 20:42:02) 
-- CODE:
c=int(input())

elif (c==2)
	print("Tartaruga")

elif (c==5)
	print("Garca")

elif (c==10)
	print("Arara")

elif (c==20)
	print("Mico-leao-dourado")

elif (c==50)
	print("Onca-pintada")

elif (c==100)
	print("Garoupa")
-- EXECUTION TIME:
0.208495
-- ERROR:
  File "/home/codebench/codes/1679/1100/main.py", line 3
    elif (c==2)
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 20:42:25) 
-- CODE:
c=int(input())

elif (c==2)
	print("Tartaruga")

elif (c==5)
	print("Garca")

elif (c==10)
	print("Arara")

elif (c==20)
	print("Mico-leao-dourado")

elif (c==50)
	print("Onca-pintada")

elif (c==100)
	print("Garoupa")
-- ERROR:
File "XXXX", line 3
    elif (c==2)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 20:42:26) 
-- CODE:
c=int(input())

elif (c==2)
	print("Tartaruga")

elif (c==5)
	print("Garca")

elif (c==10)
	print("Arara")

elif (c==20)
	print("Mico-leao-dourado")

elif (c==50)
	print("Onca-pintada")

elif (c==100)
	print("Garoupa")
-- ERROR:
File "XXXX", line 3
    elif (c==2)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 20:42:31) 
-- CODE:
c=int(input())

elif (c==2)
	print("Tartaruga")

elif (c==5)
	print("Garca")

elif (c==10)
	print("Arara")

elif (c==20)
	print("Mico-leao-dourado")

elif (c==50)
	print("Onca-pintada")

elif (c==100)
	print("Garoupa")
-- ERROR:
File "XXXX", line 3
    elif (c==2)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 20:42:35) 
-- CODE:
c=int(input())

elif (c==2)
	print("Tartaruga")

elif (c==5)
	print("Garca")

elif (c==10)
	print("Arara")

elif (c==20)
	print("Mico-leao-dourado")

elif (c==50)
	print("Onca-pintada")

elif (c==100)
	print("Garoupa")
-- ERROR:
File "XXXX", line 3
    elif (c==2)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 20:46:44) 
-- CODE:
c=int(input())
for(c==2):
	print("Tartaruga")

for (c==5):
	print("Garca")

for (c==10):
	print("Arara")

for (c==20):
	print("Mico-leao-dourado")

for (c==50):
	print("Onca-pintada")

for (c==100):
	print("Garoupa")
-- ERROR:
File "XXXX", line 2
    for(c==2):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 20:46:45) 
-- CODE:
c=int(input())
for(c==2):
	print("Tartaruga")

for (c==5):
	print("Garca")

for (c==10):
	print("Arara")

for (c==20):
	print("Mico-leao-dourado")

for (c==50):
	print("Onca-pintada")

for (c==100):
	print("Garoupa")
-- ERROR:
File "XXXX", line 2
    for(c==2):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 20:46:57) 
-- CODE:
c=int(input())
for(c==2):
	print("Tartaruga")

for (c==5):
	print("Garca")

for (c==10):
	print("Arara")

for (c==20):
	print("Mico-leao-dourado")

for (c==50):
	print("Onca-pintada")

for (c==100):
	print("Garoupa")
-- ERROR:
File "XXXX", line 2
    for(c==2):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 12:31:53) 
-- CODE:
c=int(input())
print:("",c)
	
for(c==2):
	print("Tartaruga")

for (c==5):
	print("Garca")

for (c==10):
	print("Arara")

for (c==20):
	print("Mico-leao-dourado")

for (c==50):
	print("Onca-pintada")

for (c==100):
	print("Garoupa")
-- EXECUTION TIME:
0.208744
-- ERROR:
  File "/home/codebench/codes/1679/1100/main.py", line 2
    print:("",c)
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 12:33:15) 
-- CODE:
c=int(input())
print:("",c)

if(c==2):
	print("Tartaruga")

elif (c==5):
	print("Garca")

elif (c==10):
	print("Arara")

elif (c==20):
	print("Mico-leao-dourado")

elif (c==50):
	print("Onca-pintada")

else (c==100):
	print("Garoupa")
-- EXECUTION TIME:
0.144576
-- ERROR:
  File "/home/codebench/codes/1679/1100/main.py", line 2
    print:("",c)
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 12:33:19) 
-- CODE:
c=int(input())
print:("",c)

if(c==2):
	print("Tartaruga")

elif (c==5):
	print("Garca")

elif (c==10):
	print("Arara")

elif (c==20):
	print("Mico-leao-dourado")

elif (c==50):
	print("Onca-pintada")

else (c==100):
	print("Garoupa")
-- EXECUTION TIME:
0.166926
-- ERROR:
  File "/home/codebench/codes/1679/1100/main.py", line 2
    print:("",c)
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 12:34:16) 
-- CODE:
c=int(input())
print:("Entrada: ",c)

if(c==2):
	print("Tartaruga")

elif (c==5):
	print("Garca")

elif (c==10):
	print("Arara")

elif (c==20):
	print("Mico-leao-dourado")

elif (c==50):
	print("Onca-pintada")

else (c==100):
	print("Garoupa")
-- EXECUTION TIME:
0.186204
-- ERROR:
  File "/home/codebench/codes/1679/1100/main.py", line 2
    print:("Entrada: ",c)
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 12:34:21) 
-- CODE:
c=int(input())
print:("Entrada: ",c)

if(c==2):
	print("Tartaruga")

elif (c==5):
	print("Garca")

elif (c==10):
	print("Arara")

elif (c==20):
	print("Mico-leao-dourado")

elif (c==50):
	print("Onca-pintada")

else (c==100):
	print("Garoupa")
-- ERROR:
File "XXXX", line 19
    else (c==100):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 12:35:30) 
-- CODE:
c=int(input(""))
print:("Entrada: ",c)

if(c==2):
	print("Animal: Tartaruga")

elif (c==5):
	print("Animal: Garca")

elif (c==10):
	print("Animal: Arara")

elif (c==20):
	print("Animal: Mico-leao-dourado")

elif (c==50):
	print("Animal: Onca-pintada")

else (c==100):
	print("Animal: Garoupa")
-- EXECUTION TIME:
0.204218
-- ERROR:
  File "/home/codebench/codes/1679/1100/main.py", line 2
    print:("Entrada: ",c)
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 12:35:38) 
-- CODE:
c=int(input(""))
print:("Entrada: ",c)

if(c==2):
	print("Animal: Tartaruga")

elif (c==5):
	print("Animal: Garca")

elif (c==10):
	print("Animal: Arara")

elif (c==20):
	print("Animal: Mico-leao-dourado")

elif (c==50):
	print("Animal: Onca-pintada")

else (c==100):
	print("Animal: Garoupa")
-- EXECUTION TIME:
0.132964
-- ERROR:
  File "/home/codebench/codes/1679/1100/main.py", line 2
    print:("Entrada: ",c)
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 12:36:20) 
-- CODE:
c=int(input(""))
print:("Entrada: ",c)

if(c==2):
	print("Animal: Tartaruga")

elif (c==5):
	print("Animal: Garca")

elif (c==10):
	print("Animal: Arara")

elif (c==20):
	print("Animal: Mico-leao-dourado")

elif (c==50):
	print("Animal: Onca-pintada")

elif (c==100):
	print("Animal: Garoupa")

else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.157499
-- ERROR:
  File "/home/codebench/codes/1679/1100/main.py", line 2
    print:("Entrada: ",c)
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 12:36:28) 
-- CODE:
c=int(input(""))
print:("Entrada: ",c)

if(c==2):
	print("Animal: Tartaruga")

elif (c==5):
	print("Animal: Garca")

elif (c==10):
	print("Animal: Arara")

elif (c==20):
	print("Animal: Mico-leao-dourado")

elif (c==50):
	print("Animal: Onca-pintada")

elif (c==100):
	print("Animal: Garoupa")

else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.218164
-- ERROR:
  File "/home/codebench/codes/1679/1100/main.py", line 2
    print:("Entrada: ",c)
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 12:37:37) 
-- CODE:
c=int(input("blka"))
print:("Entrada: ",c)

if(c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Garca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.3032
-- ERROR:
  File "/home/codebench/codes/1679/1100/main.py", line 2
    print:("Entrada: ",c)
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 12:37:42) 
-- CODE:
c=int(input("blka: "))
print:("Entrada: ",c)

if(c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Garca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.150363
-- ERROR:
  File "/home/codebench/codes/1679/1100/main.py", line 2
    print:("Entrada: ",c)
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 12:38:15) 
-- CODE:
c=int(input("blka: "))
print:("Entrada:",c)

if(c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Garca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.210147
-- ERROR:
  File "/home/codebench/codes/1679/1100/main.py", line 2
    print:("Entrada:",c)
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 12:38:24) 
-- CODE:
c=int(input("blka: "))
print:("Entrada:" ,c)

if(c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Garca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 12:38:25) 
-- CODE:
c=int(input("blka: "))
print:("Entrada:" ,c)

if(c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Garca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.152221
-- ERROR:
  File "/home/codebench/codes/1679/1100/main.py", line 2
    print:("Entrada:" ,c)
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 12:38:26) 
-- CODE:
c=int(input("blka: "))
print:("Entrada:" ,c)

if(c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Garca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 12:38:41) 
-- CODE:
c=int(input("blka: "))
print("Entrada:" ,c)

if(c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Garca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.142895
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
